--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,55 @@
-scrapy
-bs4
+absl-py==0.6.1
+asn1crypto==0.24.0
+astor==0.7.1
+attrs==18.2.0
+Automat==0.7.0
+backports.weakref==1.0.post1
+beautifulsoup4==4.6.3
+bs4==0.0.1
+cffi==1.11.5
+constantly==15.1.0
+cryptography==2.4.2
+cssselect==1.0.3
+enum34==1.1.6
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.2.0
+gast==0.2.0
+grpcio==1.17.1
+h5py==2.9.0
+hyperlink==18.0.0
+idna==2.8
+incremental==17.5.0
+ipaddress==1.0.22
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
+lxml==4.2.5
+Markdown==3.0.1
+mock==2.0.0
+numpy==1.15.4
 pandas==0.19.0
-numpy
-scipy
-scikit-learn
-tensorflow
-tensorflow-gpu
+parsel==1.5.1
+pbr==5.1.1
+protobuf==3.6.1
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycparser==2.19
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
+pyOpenSSL==18.0.0
+python-dateutil==2.7.5
+pytz==2018.7
+queuelib==1.5.0
+scikit-learn==0.20.2
+scipy==1.2.0
+Scrapy==1.5.1
+service-identity==18.1.0
+six==1.12.0
+tensorboard==1.12.1
+tensorflow==1.12.0
+tensorflow-gpu==1.1.0
+termcolor==1.1.0
+Twisted==18.9.0
+w3lib==1.19.0
+Werkzeug==0.14.1
+zope.interface==4.6.0
