--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ Scrapy==1.5.1
 service-identity==18.1.0
 six==1.12.0
 tensorboard==1.12.1
-tensorflow==1.12.0
+tensorflow>=1.12.1
 tensorflow-gpu==1.1.0
 termcolor==1.1.0
 Twisted==18.9.0
